B&L QA/objects/CHNSU_CallReporting_Days__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Last_14_days__c</fullName>
        <defaultValue>14</defaultValue>
        <description>CHNSU call reporting days for last 14 days</description>
        <label>Last 14 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_30_days__c</fullName>
        <defaultValue>30</defaultValue>
        <description>CHNSU call reporting days for last 30 days</description>
        <label>Last 30 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_3_Days__c</fullName>
        <label>Last 3 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_value_to_enable_Reporting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>N value to enable Reporting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Date_Number__c</fullName>
        <label>Settlement Date Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Coaching_Calls__c</fullName>
        <label>Valid Coaching Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CHNSU CallReporting Days</label>
</CustomObject>